# Opencv-Computer-Vision

./: README.md
Closing/: CMakeLists.txt  closing.cpp
Contour/: CMakeLists.txt  contour.cpp  contour2.cpp
Digit_Recog/: CMakeLists.txt  traindigits.cpp
Dilation/: CMakeLists.txt  dilation.cpp
Erosion/: CMakeLists.txt  erosion.cpp
Opening/: CmakeLists.txt  opening.cpp
Retr/: CMakeLists.txt  retr.cpp
